<package>
  <name>maze_solver</name>
  <version>0.1.0</version>
  <description>
      This app utilizes openCV to navigate a line maze from start to finish
  </description>
  <maintainer email="trobison17@cornellcollege.edu">Thomas Robison</maintainer>
  <maintainer email="hwin16@cornellcollege.edu">Htut Khine Win</maintainer>
  <maintainer email="csickelka14@cornellcollege.edu">Christian Sickelka</maintainer>
  <maintainer email="whnin@cornellcollege.edu">Wint Hnin</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/thatfreshjive/maze_solver</url>
  <author>Thomas Robison</author>
  <author>Htut Khine Win</author>
  <author>Wint Hnin</author>
  <author>Christian Sickelka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlebot_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>turtlebot_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
